fix gap between blocks and readme

--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -9,5 +9,6 @@
 @media all and (max-width: 767px) {
   .footer__links {
     flex-direction: column;
+    gap: 32px;
   }
 }
